# zack-cdktf-assessment

./: .gitignore  Pipfile  README.md  cdktf.json  main-test.py  main.py  main.ts  package-lock.json  package.json  pyproject.toml
.github/workflows/: pr.yaml
src/: backend.py  backend.ts  cdktf.json  frontend.py  main.py
src/lambdas/resize/: handler.py
src/utils/: utils.py
tests/: test_integration.py
website/: README.md  package-lock.json  package.json
website/scripts/: deploy.js  destroy.js
