[tool.poetry]
name = "zack-cdktf-assessment"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
cdktf-cdktf-provider-aws = "^19.4.0"
cdktf-cdktf-provider-local = "^10.0.0"
pipenv = "^2023.12.1"
constructs = "^10.3.0"
black = "^24.1.1"
isort = "^5.13.2"
flake8 = "^7.0.0"
pytest = "^8.0.0"
boto3 = "^1.34.37"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
